fix: add z-index to slider__nav

--- a/style.css
+++ b/style.css
@@ -441,6 +441,7 @@ a {
 
 .slider__nav {
   width: 60px;
+  z-index: 10;
 }
 
 .slider__nav .arrow {
